# LightGlue-cpp

./: .gitignore  .gitmodules  Dockerfile  docker-compose.yaml  links.md
scripts/: .bashrc
ws/examples/notebooks/: lightblue_example.ipynb
ws/examples/onnx-classification/: CMakeLists.txt
ws/examples/onnx-classification/src/: main.cpp
ws/examples/onnx-classification/weights/: mnist.onnx  mnist_classification.onnx
